// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteUserPage when the user is an admin should match the snapshot when the user is an admin 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb has-arrow-separator mb-4"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-home"
              />
            </span>
            <span>
              Home
            </span>
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2/delete"
          >
            Delete user
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="columns is-centered"
    >
      <div
        class="column is-half"
      >
        <div
          class="card is-shadowless"
        >
          <div
            class="card-content"
          >
            <div
              class="has-text-centered mb-4"
            >
              <span
                class="icon is-medium has-text-danger"
              >
                <i
                  class="fas fa-user-times fa-3x"
                />
              </span>
            </div>
            <h3
              class="title is-4 has-text-centered"
            >
              Delete admin user "user"?
            </h3>
            <p
              class="has-text-centered mb-5"
            >
              This action cannot be undone. The user will be permanently removed from the system.
            </p>
            <div
              class="field is-grouped is-grouped-centered"
            >
              <div
                class="control"
              >
                <button
                  class="button is-light"
                  data-testid="no"
                >
                  Cancel
                </button>
              </div>
              <div
                class="control"
              >
                <button
                  class="button is-danger"
                  data-testid="yes"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="fas fa-user-times"
                    />
                  </span>
                  <span>
                    Delete User
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeleteUserPage when the user is not an admin should match the snapshot when the user is not an admin 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb has-arrow-separator mb-4"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-home"
              />
            </span>
            <span>
              Home
            </span>
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2/delete"
          >
            Delete user
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="columns is-centered"
    >
      <div
        class="column is-half"
      >
        <div
          class="card is-shadowless"
        >
          <div
            class="card-content"
          >
            <div
              class="has-text-centered mb-4"
            >
              <span
                class="icon is-medium has-text-danger"
              >
                <i
                  class="fas fa-user-times fa-3x"
                />
              </span>
            </div>
            <h3
              class="title is-4 has-text-centered"
            >
              Delete user "user"?
            </h3>
            <p
              class="has-text-centered mb-5"
            >
              This action cannot be undone. The user will be permanently removed from the system.
            </p>
            <div
              class="field is-grouped is-grouped-centered"
            >
              <div
                class="control"
              >
                <button
                  class="button is-light"
                  data-testid="no"
                >
                  Cancel
                </button>
              </div>
              <div
                class="control"
              >
                <button
                  class="button is-danger"
                  data-testid="yes"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="fas fa-user-times"
                    />
                  </span>
                  <span>
                    Delete User
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
